<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_leaderboard">Leaderboard</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_ghost_game">GhostGame</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="text_teamNames">Richard Kane, Aman Kapoor, Aditya Bindra, Jeremy Wang</string>
    <string name="text_University">University of Virginia</string>
    <string name="text_classNameSemester">CS 2110 Fall 2014</string>
    <string name="soundOnOff">Sound</string>
    <string name="gameView">gameView</string>

</resources>
